should be a fix for #1018. The new cpu detect code was running on each cpu as they come up, storing away cpuid info into the current cpu structure. Trouble was the code was running before the current thread pointer was set on each cpu, so it was always looking up cpu 0's structure and saving there, leaving the other ones uninitialized. Surprisingly this works fine on my machine, but obviously fails on others (cpuid info would have been zeroed probably). Solution is to change the order that things are brought up on each cpu to set the current thread pointer first. I don't really like that solution but it'll work for now. Added a comment to the effect.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@20154 a95241bf-73f2-0310-859d-f6bbb57e9c96